Don't check mail while the error dialog is shown.

With interval check enabled, the user would see 12 error boxes stacked
over each other after one hour otherwise.

I never liked this dialog and am tempted to remove it altogether,
actually.

BUG: 243605